--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -19,11 +19,18 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+    
+    - id: 'auth'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: ${{ secrets.GKE_SA_KEY }}
+    
     - name: Deploy a Cloud Function
       id: deploy-function
       uses: google-github-actions/deploy-cloud-functions@v0.1.0
       with:
         name: fetchQuestions
         runtime: nodejs18
-        project: ${{ secrets.GKE_PROJECT }}
-        credentials_json: ${{ secrets.GKE_SA_KEY }}
+        project_id: ${{ secrets.GKE_PROJECT }}
+        credentials: ${{ secrets.GKE_SA_KEY }}
