--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -14,9 +14,10 @@ jobs:
       matrix:
         node-version: [18.x]
     steps:
-    - uses: actions/checkout@v3
+    - uses: 'actions/checkout@v4'
+
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
     
@@ -28,7 +29,7 @@ jobs:
     
     - name: Deploy a Cloud Function
       id: deploy-function
-      uses: google-github-actions/deploy-cloud-functions@v0.1.0
+      uses: google-github-actions/deploy-cloud-functions@v1
       with:
         name: fetchQuestions
         runtime: nodejs18
