--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -40,7 +40,7 @@ jobs:
         gcloud projects add-iam-policy-binding $PROJECT_ID \
           --member="allUsers" \
           --role="roles/cloudfunctions.admin"
-          --condition=None
+          --condition="None"
     
     - name: Deploy a Cloud Function
       id: deploy-function
