--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "jsonwebtoken": "^9.0.2"
   }
 }
