--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -39,6 +39,6 @@ jobs:
       id: deploy-function
       uses: "google-github-actions/deploy-cloud-functions@v0"
       with:
-        name: fetchQuestions
+        name: function
         runtime: nodejs18
         source: ./backend/functions/
