--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -42,4 +42,4 @@ jobs:
         name: function
         runtime: nodejs18
         timeout: 540
-        source_dir: ./question-fetcher
+        source_dir: ./workspace/question-fetcher
