--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -42,3 +42,4 @@ jobs:
         name: ./question-fetcher/function
         runtime: nodejs18
         timeout: 540
+        source_dir: ./question-fetcher
