--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -39,7 +39,7 @@ jobs:
       id: deploy-function
       uses: "google-github-actions/deploy-cloud-functions@v0"
       with:
-        name: ./question-fetcher/function
+        name: function
         runtime: nodejs18
         timeout: 540
         source_dir: ./question-fetcher
