I want to see something

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "question-fetcher",
+  "name": "ay2324s1-course-assessment-g40",
   "version": "1.0.0",
   "description": "",
   "main": "function.js",
